# raylibCMakeSetup2.0

./: .gitignore  CMakeLists.txt  README.md  devserver.bat  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  template.html  web_build.bat
.samengine/: copy.js  links.info.md  linksaver.json  samfile
include/: gameLayer.hpp
include/gameLayer/: gameLayer.hpp
include/platform/: imguiTools.h  macros.hpp  stringManipulation.h  utility.hpp  version.hpp
pages/: index.md
src/: gameLayer.cpp
src/gameLayer/: gameLayer.cpp
src/platform/: imguiTools.cpp  main.cpp  stringManipulation.cpp  ultility.cpp  utility.cpp  version.cpp
